--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <h1>I'M FORAM</h1>
+    <h1 style="background-color: aqua;">I'M FORAM</h1>
     <h2>About Me</h2>
     <p>
       Front-end Developer with 6 years of experience specializing in building
